# sourceharbor

./: .gitignore  .gitleaks.toml  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-ci-standard-image.yml  build-public-api-image.yml  publish-mcp-registry.yml  publish-pypi.yml
.stitch/: DESIGN.md
apps/: runtime_paths.py
apps/api/app/: config.py  main.py  security.py
apps/api/tests/: conftest.py  test_api_integration_smoke.py  test_api_notifications_auth.py  test_api_real_smoke_script_contract.py  test_api_routes.py  test_computer_use_service_extra_coverage.py  test_config_and_source_names.py  test_errors_and_feed_service.py  test_ingest_service.py  test_jobs_bundle_route.py  test_jobs_repository.py  test_jobs_service.py  test_knowledge_and_repo_units.py  test_main_and_workflows_success_coverage.py  test_manual_source_intake_service.py  test_mock_contract_consistency.py  test_notifications_service.py  test_notifications_service_extra_coverage.py  test_ops_route.py  test_ops_service.py  test_phase4_observability_migration.py  test_quality_gate_script_contract.py  test_reader_pipeline_service.py  test_reader_repositories.py  test_reader_routes.py  test_repositories_coverage_extra.py  test_retrieval_service.py  test_runtime_doctor.py  test_security_write_access.py  test_services_security_and_timeouts.py  test_source_identity_service.py  test_story_read_model.py  test_subscriptions_service_coverage.py  test_ui_audit_service_extra_coverage.py  test_vendor_signal_templates.py  test_video_model_content_type_contract.py  test_videos_and_subscriptions_router_coverage.py  test_videos_service_dispatch.py  test_watchlists_route.py  test_watchlists_service.py  (+2 more)
apps/mcp/: server.py
apps/mcp/schemas/: tools.json
apps/mcp/tests/: test_api_client.py  test_ingest_workflows_tools.py  test_reader_tools.py  test_reports_tools.py  test_server_runtime.py  test_tool_normalizers.py  (+1 more)
apps/remotion/: README.md  package-lock.json  package.json
apps/web/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.mts
artifacts/licenses/: third-party-license-inventory.json
config/docs/: nav-registry.json
config/governance/: current-proof-contract.json  disk-space-governance.json  external-lane-contract.json  public-entrypoints.json  upstream-compat-matrix.json
config/public/: assets-provenance.json  github-profile.json  mcp-directory-profile.json
config/runtime/: bilibili-live-canary-matrix.json
config/source-templates/: vendor_signal_templates.json
contracts/source/: openapi.yaml
docs/: architecture.md  builders.md  faq.md  index.md  mcp-quickstart.md  media-kit.md  project-status.md  proof.md  public-distribution.md  public-skills.md  runbook-local.md  runtime-truth.md  see-it-fast.md  site-capability.md  start-here.md  testing.md
docs/blueprints/: 2026-03-31-agent-autopilot-spike.md  2026-03-31-ask-your-sources-grounded-answer-contract.md  2026-03-31-hosted-readiness-spike.md  2026-03-31-program-closeout-matrix.md  2026-04-08-reader-product-system-blueprint.md  2026-04-09-reader-product-cluster-judge-contract.md  2026-04-09-reader-product-intake-front-door-contract.md  2026-04-09-reader-product-lane-split-contract.md  2026-04-09-reader-product-object-contract.md  2026-04-09-reader-product-version-gap-contract.md
docs/reference/: ai-evaluation.md  disk-space-governance.md  logging.md  project-positioning.md  public-artifact-exposure.md  public-assets-provenance.md  public-privacy-and-data-boundary.md  public-repo-readiness.md  public-rights-and-provenance.md
docs/submission/: awesome-opencode.md  mcp-so.md  mcpservers-org.md  pulsemcp.md
evals/: README.md  rubric.md
infra/config/: env.contract.json
infra/docker/: sourceharbor-api.Dockerfile
infra/migrations/: 20260409_000018_consumption_batches.sql  20260409_000019_cluster_verdict_manifests.sql  20260409_000020_published_reader_documents.sql
integrations/binaries/: media_commands.py
integrations/providers/: article_fetch.py  bilibili_evidence.py  bilibili_support.py  resend.py  rsshub.py
integrations/reader/: miniflux.py
scripts/ci/: bootstrap_strict_ci_runtime.sh  build_public_api_image.sh  build_standard_image.sh  check_standard_image_publish_readiness.sh  e2e_live_smoke.sh  gemini_ui_ux_audit.py  prepare_web_runtime.sh  public_api_image_smoke.sh  python_tests.sh  run_mutmut.sh  smoke_full_stack.sh
scripts/deploy/: core_services.sh
scripts/governance/: check_ci_workflow_strictness.py  check_docs_governance.py  check_mutation_stats.py  check_no_unindexed_evidence.py  check_remote_security_alerts.py  check_run_manifest_completeness.py  check_runtime_cache_freshness.py  check_runtime_metadata_completeness.py  check_test_assertions.py  check_web_button_coverage.py  common.py  gate.sh  migrate_local_private_ledgers.py  probe_external_lane_workflows.py  quality_gate.sh  render_current_state_summary.py  render_docs_governance.py  render_newcomer_result_proof.py  render_third_party_notices.py
scripts/lib/: standard_env.sh  temporal_ready.sh
scripts/release/: generate_release_prechecks.py
scripts/runtime/: bootstrap_full_stack.sh  build_evidence_index.py  capture_frontstage_proof_pack.py  capture_reader_proof_pack.py  dev_api.sh  doctor.py  full_stack.sh  open_repo_chrome_tabs.py  prune_runtime_cache.py  run_frontstage_clean_ui_audit.py  run_reader_clean_ui_audit.py
starter-packs/: README.md  compatibility.md
starter-packs/claude-code/: CLAUDE.md
starter-packs/codex/: AGENTS.md
starter-packs/mcp-registry/: README.md  sourceharbor-server.template.json
starter-packs/openclaw/: README.md  clawhub.package.template.json  openclaw.plugin.json
starter-packs/typescript-sdk/: example.ts
(+340 files in other folders)
